# FLAME-CARE

./: .gitignore  .readthedocs.yaml  CARE_on_image.py  LICENSE  MATLAB_README.md  README.md  README_INSTALL.md  README_MATLAB.md  care_data_configuration.ipynb  care_evaluation.ipynb  care_inference.ipynb  care_inference_basic.ipynb  care_test.ipynb  care_training.ipynb  create_care_dataset.ipynb  environment.yml  environment_windows.yml  environment_wsl.yml  image_parser_test.ipynb  index_available_images.ipynb  mlflow_debug.py  pyproject.toml  start_mlflow_server.py  test.ipynb
cmd/: CARE_on_image.py
datasets/: 20250513_18I_denoising_7to40F.json  20250513_19I_7to40F.json  20250513_3I_denoising_7to40F.json  20250513_40I_denoising_7to40F.json  20250522_192I_denoising_5to40F.json  20250523_112I_denoising_5to40F.json  20250523_192I_denoising_5to40F.json  20250527_112I_denoising_5to40F.json  20250618_224I_denoising_5to40F.json  20250826_72I_tutorial_5to40F.json  raw_image_index.csv
docs/: README_MATLAB.md  README_WINDOWS_INSTALL.md  README_WSL_INSTALL.md  api.rst  conf.py  documentation.rst  index.rst  requirements.txt
docs/source/: README_CMDLINE.rst  README_MATLAB.rst  README_WINDOWS_INSTALL.rst  README_WSL_INSTALL.rst  about.rst  api.rst  conf.py  index.rst  notes.rst  tutorial.rst  version.rst  (+1 more)
flame/: __init__.py  engine.py  error.py  eval.py  image.py  io.py  mlflow_pyfunc.py  model.py  test.ipynb  tile.py  utils.py
flame-care/: engine.py
flame_image/: TileData.py
howto/: README_CMDLINE.md  README_WINDOWS_INSTALL.md
logs/: 20250522_192I_denoising_5to40F.logfile
matlab/: runCARE.m
(+17 files in other folders)
