[project]
name = "flame-care"
version = "0.1.0"
description = "Tools to perform Content-Aware Image Restoration (CARE) on Fast, Large-Area, Multiphoton Exoscope (FLAME) Images."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [
	{name = "Alexandre R. Sathler"}, 
	{name = "Alex Vallmitjana Lees"},
]
keywords = ["microscopy", "machine learning", "image restoration", "label-free", "imaging"]

[project.urls]
homepage = "https://sites.uci.edu/nlom/"
source = "https://github.com/AlexSath/FLAME-CARE"
documentation = "https://flame-care.readthedocs.io"
publication = "https://www.nature.com/articles/s41598-020-75172-9"

[build-system]
requires = [
	"setuptools",
	"mlflow (>=1.2, <1.3)",
	"nvidia-cublas-cu12==12.5.3.2",
	"nvidia-cuda-cupti-cu12==12.5.82",
      	"nvidia-cuda-nvcc-cu12==12.5.82",
      	"nvidia-cuda-nvrtc-cu12==12.5.82",
      	"nvidia-cuda-runtime-cu12==12.5.82",
      	"nvidia-cudnn-cu12==9.3.0.75",
      	"nvidia-cufft-cu12==11.2.3.61",
      	"nvidia-curand-cu12==10.3.6.82",
      	"nvidia-cusolver-cu12==11.6.3.83",
      	"nvidia-cusparse-cu12==12.5.1.3",
      	"nvidia-nvjitlink-cu12==12.9.86",
	"onnx==1.17.0",
      	"onnxruntime-gpu==1.22.0",
	"tqdm",
	"scipy",
	"scikit-image",
	"scikit-learn",
	"opencv-python==4.10.0.82",
	"pillow==11.3",
	"numpy>2",
	"pandas>2",
	"jupyterlab>4"
]

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "html", "./docs", "./_build", "--nitpicky", "--verbose"]


